--- a/src/pages/Popup/components/switcher.css
+++ b/src/pages/Popup/components/switcher.css
@@ -63,11 +63,11 @@ input:checked + .slider:before {
 
 .switcher-wrapper {
     width: 100%;
-    height: 40px;
+    height: 56px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 8px 0;
+    padding: 16px 12px;
     box-sizing: border-box;
 }
 
@@ -75,4 +75,13 @@ input:checked + .slider:before {
     color: #2196F3;
     font-size: 16px;
     font-weight: 600;
+    margin-bottom: 8px;
+    border-bottom: 3px solid #2196F3;
+}
+
+.switcher-wrapper-small {
+    border: none;
+    font-size: 16px;
+    font-weight: 600;
+    /*color: #fff;*/
 }
