--- a/src/pages/Popup/components/tag-field.css
+++ b/src/pages/Popup/components/tag-field.css
@@ -1,5 +1,9 @@
 .tag-field {
     width: 100%;
+    height: 510px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .tag-field-header {
@@ -36,6 +40,8 @@
     justify-content: flex-start;
     flex-wrap: wrap;
     margin-top: 24px;
+    max-height: 390px;
+    overflow: auto;
 }
 
 .tag-field-content-item {
