--- a/src/pages/Popup/index.css
+++ b/src/pages/Popup/index.css
@@ -1,23 +1,24 @@
 body {
-  width: 300px;
-  height: 460px;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    width: 376px;
+    height: 600px;
+    max-width: 376px;
+    max-height: 600px;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 
-  position: relative;
-  padding: 8px;
-  box-sizing: border-box;
+    position: relative;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-*{
-  box-sizing: border-box;
+#app-container {
+    width: 100%;
+    height: 100%;
 }
